# tsum-assistant

./: .gitignore  .pdm-python  README.md  STREAMING.md  docker-compose.yml  gitignore  package.json  pnpm-lock.yaml  pyproject.toml  run.py
.frontend/: next.config.mjs  package.json  pnpm-lock.yaml
.frontend/app/: page.tsx
agent/events/: workflow.py
agent/workflows/: main.py
api/: api_server.py  main.py  server.py
api/lib/: vercel.py
api/routers/: catalog.py  chat.py  test_stream.py  vercel.py
app/: agent.py  main_js.py  stub_workflow.py  utils.py  workflow.py  workflow_events.py
app/catalog/: models.py  query.py  search_workflow.py  settings.py
app/trends/: trend_perplexity.py
frontend/: .dockerignore  Dockerfile  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
frontend-new/: .gitignore
frontend-new/app/: layout.tsx
frontend-new/components/: message.tsx  navbar.tsx
frontend-new/components/ui/: textarea.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/components/: chat-llama.tsx  chat-section.tsx  header.tsx
frontend/app/components/ui/: textarea.tsx
frontend/app/feed/: page.tsx
frontend/assets/: globals.css
frontend/components/: CustomerSelector.tsx  ProductFeed.tsx  chat-llama.tsx  chat-section.tsx  chat.tsx  markdown.tsx  message.tsx  multimodal-input.tsx  overview.tsx
frontend/components/chat/: chat-llama.tsx
frontend/components/feed/: product-card.tsx  product-feed.tsx
frontend/components/ui/: button.tsx
frontend/contexts/: CustomerContext.tsx
frontend/hooks/: use-feed.ts  use-scroll-to-bottom.ts
frontend/lib/: utils.ts
frontend/types/: chat.ts  feed.ts
migrations/: env.py
migrations/versions/: 54fb9519ea4e_init.py  cd9eab022759_categories.py  cfa16bcd274a_add_brand_segments.py  d0ce85a814c3_add_categories.py
tsa/: seed.py
tsa/api/: server.py
tsa/api/lib/: db.py  vercel.py
tsa/api/routers/: catalog.py  chat.py  test_stream.py
tsa/catalog/: models.py  parse.py  query.py  search_workflow.py  update_segments.py
tsa/chat/: chat_events.py  chat_workflow.py
tsa/config/: __init__.py  config.py
tsa/models/: __init__.py  catalog.py  customer.py
(+23 files in other folders)
