[project]
name = "tsa"
version = "0.1.0"
description = "TSUM Shopping Assistant"
authors = [
    {name = "nerifuture", email = "notintricate@users.noreply.github.com"},
    {name = "sk", email = "sk@vrtech.global"},
]
dependencies = [
    "fastapi>=0.109.1",
    "uvicorn[standard]>=0.23.2",
    "python-dotenv>=1.0.0",
    "aiostream>=0.6.4",
    "colorama>=0.4.6",
    "qdrant-client>=1.12.1",
    "llama-index-core>=0.12.3",
    "llama-index>=0.12.3",
    "llama-index-llms-perplexity>=0.3.1",
    "llama-index-vector-stores-qdrant>=0.4.0",
    "llama-index-callbacks-arize-phoenix>=0.3.0",
    "llama-index-program-openai>=0.3.1",
    "llama-index-utils-workflow>=0.3.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.7.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy>=2.0.37",
    "asyncpg>=0.30.0",
    "greenlet>=3.1.1",
    "alembic>=1.14.1",
]
requires-python = "==3.12.*"
readme = "README.md"


[tool.pdm.scripts]
dev = "python run.py dev"
prod = "python run.py prod"

[tool.pdm]
distribution = false
